--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #f5f5f5;
+  background-color: #242424;
   color: #444;
   font-family: 'Poppins', sans-serif;
   display: flex;
@@ -17,10 +16,10 @@ body {
 }
 
 h1 {
-  color: rgb(179, 131, 226);
+  color: #fbfaee;
   font-size: 10rem;
   text-align: center;
-  opacity: 0.4;
+  opacity: 0.5;
 }
 
 form {
@@ -36,6 +35,7 @@ form {
   padding: 1rem 2rem;
   display: block;
   width: 100%;
+  border-radius: 12px;
 }
 
 .input::placeholder {
@@ -43,7 +43,7 @@ form {
 }
 
 .input:focus {
-  outline-color: rgb(179, 131, 226);
+  outline-color: rgb(95, 129, 243);
 }
 
 .todos {
@@ -51,12 +51,19 @@ form {
   padding: 0;
   margin: 0;
   list-style-type: none;
+  border-radius: 12px;
+}
+
+.todos li:hover{
+  background-color: #f0f0f0;
+  border-radius: 12px;
+  
 }
 
 .todos li {
-  border-top: 1px solid #e5e5e5;
   cursor: pointer;
   font-size: 1.5rem;
+  margin: 1rem 0; 
   padding: 1rem 2rem;
 }
 
